--- a/index.scss
+++ b/index.scss
@@ -8,6 +8,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  user-select: none;
+  -webkit-user-drag: none;
 }
 li {
   list-style: none;
@@ -26,6 +28,23 @@ a {
 .swiper {
   width: 100%;
   height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  -webkit-user-drag: none;
 }
 // sec1Swiper
 #sec1Swiper {
@@ -58,25 +77,25 @@ a {
       padding: 20px 0;
       align-items: center;
       justify-content: center;
-      &::after{
-        content: '';
+      &::after {
+        content: "";
         position: absolute;
         top: -1px;
         width: 100%;
         height: 168px;
-        background-color: rgba(0,0,0,0.5);
+        background-color: rgba(0, 0, 0, 0.5);
         z-index: -1;
         opacity: 0;
       }
-      &:hover:after{
+      &:hover:after {
         opacity: 1;
       }
       li {
         height: 100%;
         flex: 1;
         position: relative;
-        &::before{
-          content: '';
+        &::before {
+          content: "";
           position: absolute;
           opacity: 0;
           background-color: #e2782a;
@@ -85,7 +104,7 @@ a {
           height: 4px;
           width: 82.86px;
         }
-        &:hover:before{
+        &:hover:before {
           opacity: 1;
         }
         a {
@@ -97,15 +116,15 @@ a {
             height: 120px;
             padding-right: 10px;
           }
-          &::after{
-            content: '';
+          &::after {
+            content: "";
             position: absolute;
             top: 0;
             width: calc(100% - 10px);
             height: 100%;
-            background-color: rgba(0,0,0,0.5);
+            background-color: rgba(0, 0, 0, 0.5);
           }
-          &:hover::after{
+          &:hover::after {
             opacity: 0;
           }
         }
@@ -129,22 +148,262 @@ a {
   }
 }
 
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  border: 1px solid #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+#sect2,
+#sect3 {
+  position: relative;
+  width: 1200px;
+  margin: 0 auto;
+  .contentsWrap {
+    display: none;
+    padding-top: 50px;
+    &.on {
+      display: flex;
+    }
+  }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
+  b {
+    line-height: 16px;
+    font-size: 15px;
+    color: #333;
+    font-weight: bold;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  p {
+    font-size: 13px;
+    color: #999;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+  a {
+    display: block;
+  }
+  h2 {
+    font-size: 35px;
+    color: #333;
+    text-align: center;
+    font-weight: 700;
+    height: 155px;
+    line-height: 155px;
+  }
+  .tabs {
+    text-align: center;
+    font-size: 18px;
+    width: 500px;
+    margin: 0 auto;
+    li {
+      flex: 1;
+    }
+  }
+  .moreBtn {
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    a {
+      display: block;
+      width: 220px;
+      height: 48px;
+      line-height: 48px;
+      text-align: center;
+      border: 1px solid #ddd;
+      font-size: 15px;
+      color: #000;
+    }
+  }
+}
+#sect2 {
+  height: 800px;
+  .contentsWrap {
+    position: absolute;
+    width: 100%;
+    justify-content: space-between;
+    li {
+      &:hover .rankThumBg {
+        transform: scale(1.1);
+        transition: 0.5s;
+      }
+      a {
+        width: 380px;
+        height: 420px;
+        overflow: hidden;
+        position: relative;
+        border-bottom: 1px solid #e5e5e5;
+        .rankThum {
+          overflow: hidden;
+          position: relative;
+          height: 330px;
+          .rankThumBg {
+            height: 100%;
+            transition: 0.5s;
+            filter: blur(3px);
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+          }
+          figure {
+            display: block;
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
+            width: 200px;
+            height: 280px;
+            img {
+              width: 100%;
+              height: 100%;
+              filter: none;
+            }
+          }
+        }
+        .rankDesc {
+          text-align: center;
+          width: 100%;
+          height: 90px;
+          justify-content: center;
+          flex-direction: column;
+          gap: 10px;
+        }
+        .rankNum {
+          position: absolute;
+          bottom: 80px;
+          left: 15px;
+          width: 45px;
+          height: 45px;
+          line-height: 45px;
+          font-size: 16px;
+          color: #fff;
+          text-align: center;
+          background: #ec7d2c;
+        }
+      }
+    }
+
+    &:nth-child(1) li {
+      &:nth-child(1) .rankThumBg {
+        background-image: url(./images/rank1-1.jpg);
+      }
+      &:nth-child(2) .rankThumBg {
+        background-image: url(./images/rank1-2.jpg);
+      }
+      &:nth-child(3) .rankThumBg {
+        background-image: url(./images/rank1-3.jpg);
+      }
+    }
+    &:nth-child(2) li {
+      &:nth-child(1) .rankThumBg {
+        background-image: url(./images/rank2-1.jpg);
+      }
+      &:nth-child(2) .rankThumBg {
+        background-image: url(./images/rank2-2.jpg);
+      }
+      &:nth-child(3) .rankThumBg {
+        background-image: url(./images/rank2-3.jpg);
+      }
+    }
+    &:nth-child(3) li {
+      &:nth-child(1) .rankThumBg {
+        background-image: url(./images/rank3-1.jpg);
+      }
+      &:nth-child(2) .rankThumBg {
+        background-image: url(./images/rank3-2.jpg);
+      }
+      &:nth-child(3) .rankThumBg {
+        background-image: url(./images/rank3-3.jpg);
+      }
+    }
+    &:nth-child(4) li {
+      &:nth-child(1) .rankThumBg {
+        background-image: url(./images/rank4-1.jpg);
+      }
+      &:nth-child(2) .rankThumBg {
+        background-image: url(./images/rank4-2.jpg);
+      }
+      &:nth-child(3) .rankThumBg {
+        background-image: url(./images/rank4-3.jpg);
+      }
+    }
+    &:nth-child(5) li {
+      &:nth-child(1) .rankThumBg {
+        background-image: url(./images/rank5-1.jpg);
+      }
+      &:nth-child(2) .rankThumBg {
+        background-image: url(./images/rank5-2.jpg);
+      }
+      &:nth-child(3) .rankThumBg {
+        background-image: url(./images/rank5-3.jpg);
+      }
+    }
+  }
+}
+#sect3 {
   height: 100%;
-  object-fit: cover;
-  -webkit-user-drag: none;
+  .contentsContainer {
+    .contentsWrap {
+      justify-content: space-between;
+      flex-wrap: wrap;
+      li {
+        width: 370px;
+        height: 560px;
+        a {
+          .eventThum {
+            height: 258px;
+            figure {
+              height: 100%;
+              img {
+                width: 100%;
+                height: 100%;
+              }
+            }
+          }
+          .eventDesc {
+            flex-direction: column;
+            padding-top: 25px;
+            gap: 1.5rem;
+            margin-bottom: 38px;
+            span {
+              display: inline-block;
+              width: 90px;
+              height: 28px;
+              line-height: 28px;
+              text-align: center;
+              padding: 0 6px;
+              font-size: 15px;
+              font-weight: 700;
+              color: #ec7d2c;
+              border: 1px solid #ec7d2c;
+            }
+          }
+          .progressBar {
+            width: 100%;
+            height: 6px;
+            background: #dcdcdc;
+            margin-bottom: 14px;
+            font-size: 0;
+            span {
+              display: inline-block;
+              width: 60%;
+              height: 6px;
+              background: #ec7d2c;
+            }
+            .done{
+              width: 100%;
+              background: #333;
+            }
+          }
+
+        }
+        .count {
+          text-align: right;
+        }
+      }
+    }
+  }
+  .moreBtn{
+    bottom: -50px;
+  }
 }
 aside {
   position: fixed;
