--- a/index.css
+++ b/index.css
@@ -6,9 +6,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
+  user-select: none;
   -webkit-user-drag: none;
 }
 
@@ -47,8 +45,7 @@ a {
   display: block;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   -webkit-user-drag: none;
 }
 
@@ -178,7 +175,7 @@ a {
 #sect2 p,
 #sect3 p {
   font-size: 13px;
-  color: #999;
+  color: #fff;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -339,7 +336,7 @@ a {
 }
 
 #sect3 {
-  height: 100%;
+  height: 2000px;
 }
 #sect3 .contentsContainer .contentsWrap {
   justify-content: space-between;
@@ -348,6 +345,13 @@ a {
 #sect3 .contentsContainer .contentsWrap li {
   width: 370px;
   height: 560px;
+}
+#sect3 .contentsContainer .contentsWrap li a figure {
+  overflow: hidden;
+}
+#sect3 .contentsContainer .contentsWrap li a:hover img {
+  transform: scale(1.1);
+  transition: 0.5s;
 }
 #sect3 .contentsContainer .contentsWrap li a .eventThum {
   height: 258px;
@@ -358,6 +362,7 @@ a {
 #sect3 .contentsContainer .contentsWrap li a .eventThum figure img {
   width: 100%;
   height: 100%;
+  transition: 0.5s;
 }
 #sect3 .contentsContainer .contentsWrap li a .eventDesc {
   flex-direction: column;
@@ -396,9 +401,6 @@ a {
 }
 #sect3 .contentsContainer .contentsWrap li .count {
   text-align: right;
-}
-#sect3 .moreBtn {
-  bottom: -50px;
 }
 
 aside {
@@ -498,4 +500,4 @@ aside .closeWrap a {
   top: 50%;
   transform: translateY(-50%);
   right: 5px;
-}/*# sourceMappingURL=index.css.map */
+}
