--- a/index.css
+++ b/index.css
@@ -49,6 +49,144 @@ a {
   -webkit-user-drag: none;
 }
 
+header {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+  min-width: 1300px;
+  z-index: 999;
+  padding: 0px 30px 0px;
+  color: #fff;
+}
+header.fixed {
+  position: fixed;
+  background-color: #fff;
+  color: #000;
+}
+header.fixed .headerLeft .hambergerWrap span {
+  background-color: #000;
+}
+header div {
+  display: flex;
+  align-items: center;
+}
+header .headerLeft {
+  width: 10%;
+  gap: 20px;
+}
+header .headerLeft h1 {
+  width: 90px;
+  height: 35px;
+}
+header .headerLeft h1 a {
+  display: block;
+  height: 100%;
+}
+header .headerLeft h1 a img {
+  width: 100%;
+  height: 100%;
+}
+header .headerLeft .hambergerWrap {
+  display: block;
+  width: 22px;
+  height: 16px;
+}
+header .headerLeft .hambergerWrap:hover span:nth-child(1) {
+  width: 15px;
+}
+header .headerLeft .hambergerWrap:hover span:nth-child(3) {
+  width: 25px;
+}
+header .headerLeft .hambergerWrap span {
+  display: block;
+  height: 3px;
+  background: #fff;
+  transition: 0.3s;
+}
+header .headerLeft .hambergerWrap span:not(:last-child) {
+  margin-bottom: 5px;
+}
+header .headerLeft .hambergerWrap span:nth-child(1) {
+  width: 25px;
+}
+header .headerLeft .hambergerWrap span:nth-child(2) {
+  width: 20px;
+}
+header .headerLeft .hambergerWrap span:nth-child(3) {
+  width: 15px;
+}
+header .headerCenter {
+  width: 60%;
+  padding-right: 63px;
+  font-size: 18px;
+}
+header .headerCenter ul {
+  display: flex;
+  width: 100%;
+  justify-content: right;
+  gap: 26px;
+}
+header .headerCenter ul li {
+  position: relative;
+}
+header .headerCenter ul li:hover:after {
+  width: 100%;
+  transition: 0.3s;
+}
+header .headerCenter ul li::after {
+  content: "";
+  position: absolute;
+  left: 3px;
+  bottom: -3px;
+  width: 0%;
+  height: 3px;
+  background-color: #e2782a;
+  z-index: 999;
+}
+header .headerRight {
+  width: 30%;
+  font-size: 14px;
+}
+header .headerRight ul {
+  flex: 1;
+}
+header .headerRight .link li {
+  gap: 10px;
+}
+header .headerRight .link li a {
+  display: block;
+  width: 60px;
+  position: relative;
+  text-align: center;
+}
+header .headerRight .link li a::before {
+  content: "";
+  display: block;
+  width: 3px;
+  height: 3px;
+  background: #ec7d2c;
+  position: absolute;
+  top: 10px;
+  left: 0;
+}
+header .headerRight .gnb {
+  font-size: 20px;
+  gap: 15px;
+}
+header .headerRight .gnb li i {
+  font-weight: 800;
+}
+header .headerRight .gnb li input {
+  background-color: transparent;
+  border: none;
+  border-bottom: 2px solid #fff;
+  outline: none;
+  color: #fff;
+  padding: 5px;
+}
+
 #sec1Swiper {
   width: 1300px 100%;
   height: 700px;
