--- a/index.scss
+++ b/index.scss
@@ -68,6 +68,17 @@ header {
         }
       }
     }
+    .headerRight{
+      .gnb{
+        li {
+          input {
+            border-bottom: 2px solid #000;
+            color: #000;
+          }
+        }
+      }
+
+    }
   }
   div {
     display: flex;
